# display-api

./: README.md  go.mod  go.sum  pyproject.toml
src/display_go/: api.go
src/display_go/grpc/: display.pb.go  display.pb.gw.go  display_grpc.pb.go
src/display_python/: __init__.py  api.py
src/display_python/grpc/: display_grpc.py  display_pb2.py  display_pb2.pyi
src/proto/: buf.gen.yaml  display.proto
